k8s/overlays/production/patches/resources-api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  template:
    spec:
      containers:
        - name: api-gateway
          resources:
            requests:
              cpu: 150m
              memory: 256Mi
            limits:
              cpu: 700m
              memory: 1Gi
