k8s/overlays/production/patches/resources-auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  template:
    spec:
      containers:
        - name: auth-service
          resources:
            requests:
              cpu: 120m
              memory: 256Mi
            limits:
              cpu: 600m
              memory: 768Mi
