k8s/overlays/production/patches/resources-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  template:
    spec:
      containers:
        - name: frontend
          resources:
            requests:
              cpu: 150m
              memory: 192Mi
            limits:
              cpu: 400m
              memory: 512Mi
