k8s/overlays/production/patches/resources-medical-record-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medical-record-service
spec:
  template:
    spec:
      containers:
        - name: medical-record-service
          resources:
            requests:
              cpu: 150m
              memory: 320Mi
            limits:
              cpu: 700m
              memory: 1Gi
