k8s/overlays/production/patches/resources-mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  template:
    spec:
      containers:
        - name: mongodb
          resources:
            requests:
              cpu: 150m
              memory: 384Mi
            limits:
              cpu: 700m
              memory: 1Gi
