k8s/overlays/production/patches/resources-notifications-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-service
spec:
  template:
    spec:
      containers:
        - name: notifications-service
          resources:
            requests:
              cpu: 120m
              memory: 320Mi
            limits:
              cpu: 700m
              memory: 1Gi
